# dronolab-stm32

./: .gitignore  CMakeLists.txt  README  README.md
appli/: CMakeLists.txt
appli/setups/: CMakeLists.txt  manual.c  manual_old.c  rc_control.c
appli/tests/: CMakeLists.txt
appli/tests/periph/: CMakeLists.txt  full_uart.c  gx3.c  lis302dl.c  motors.c  rc.c  stm32f4eval_accelero.c  stm32f4eval_motors.c  stm32f4eval_rc.c  stm32f4eval_spi2.c  tlc59116.c  void.c
data/: datastore.cpp  datastore.h  messages.h  messages_def.h  messages_entry.cpp  messages_entry.h  messages_handler.cpp  messages_handler.h  parameters.cpp  parameters.h
drivers/: timer.h
drivers/stm32/: timer.c  timer_registers.h
drivers/stm32f1xx/: boot.c
drivers/stm32f4xx/: exti.c  memmap.h  stm32f4xx.c  stm32f4xx.h
lib/: CMakeLists.txt  attitudeController.h  derivative.h  integrate.h  soft_timer_delay.h
lib/SCP/: endianess.h  scp_parser.c  scp_parser.h  sender.c  sender.h  util.h
lib/attitudeController/: attitudeController.c  pitch.h  roll.h  yaw.h
lib/attitudeController/pitch/: pitch.c  pitch_.h
lib/attitudeController/roll/: roll.c  roll_.h
lib/attitudeController/yaw/: yaw.c  yaw_.h
lib/differential/: derivative.c  derivative.h  integrate.c  integrate.h
lib/event/: event.c
periph/: CMakeLists.txt  gx3.h  lis302dl.h  motors.h  rc.h  tlc59116.h
periph/GX3/: circular_buff.c  circular_buff.h  gx3.c  gx3_.h  gx3_msg.h
periph/GX3/SCP/: endianess.h  scp_parser.c  scp_parser.h  sender.c  sender.h  util.c
periph/lis302dl/: lis302dl.c  lis302dl_.h  lis302dl_regs.h
periph/motors/: motors.c
periph/rc/: rc.c
periph/tlc59116/: tlc59116.c  tlc59116_regs.h
platform/: platform.h  platform_leds.h
platform/behemoth/: CMakeLists.txt  behemoth.c  behemoth.h  behemoth_button.c  behemoth_drivers.c  behemoth_leds.c  behemoth_lib.c  behemoth_net.c  behemoth_periph.c  include.cmake
platform/boreas/: CMakeLists.txt  boreas.c  boreas.h  boreas_button.c  boreas_drivers.c  boreas_leds.c  boreas_lib.c  boreas_net.c  boreas_periph.c  include.cmake  openocd.cfg
platform/scripts/: boreas.cfg  boreas.cfg.old
platform/stm32f4eval/: CMakeLists.txt  include.cmake  stm32f4eval.c  stm32f4eval.h  stm32f4eval_button.c  stm32f4eval_drivers.c  stm32f4eval_leds.c  stm32f4eval_lib.c  stm32f4eval_periph.c
wiki/: Home.md
